# hunk

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  bacon.toml  flake.nix  justfile
crates/hunk-browser/: Cargo.toml
crates/hunk-browser/src/: cef_backend.rs  config.rs  frame.rs  lib.rs  runtime.rs  safety.rs  session.rs  snapshot.rs
crates/hunk-browser/tests/: cef_smoke.rs  config.rs  frame.rs  input.rs  safety.rs  session.rs
crates/hunk-codex/: Cargo.toml
crates/hunk-codex/src/: android_tools.rs  api.rs  app_server_client.rs  app_server_client_embedded.rs  app_server_client_remote.rs  browser_tools.rs  diff_stats.rs  errors.rs  host.rs  in_process_app_server_client.rs  lib.rs  protocol.rs  rpc.rs  state.rs  structured_generation.rs  terminal_tools.rs  threads.rs  tools.rs  ws_client.rs
crates/hunk-codex/src/threads/: core.rs  helpers.rs  notifications.rs
crates/hunk-codex/tests/: android_tools.rs  browser_tools.rs  embedded_apply_patch_turn.rs  host_runtime.rs  protocol_schema_smoke.rs  real_runtime_smoke.rs  remote_app_server_client.rs  request_id_and_correlation.rs  rpc_session.rs  state_reducer.rs  terminal_tools.rs  thread_service.rs  thread_service_snapshot_reconciliation.rs  tools.rs  windows_cwd_normalization.rs  windows_thread_list_compat.rs
crates/hunk-desktop/: Cargo.toml
crates/hunk-desktop/src/: app.rs  main.rs  terminal_env.rs  updater_helper.rs
crates/hunk-desktop/src/app/: ai_android_tools.rs  ai_composer_clipboard.rs  ai_composer_commands.rs  ai_composer_completion.rs  ai_dynamic_tools.rs  ai_git_progress.rs  ai_paths.rs  ai_rollout_fallback.rs  ai_runtime.rs  ai_terminal_dynamic_tools.rs  ai_terminal_review.rs  ai_terminal_safety.rs  ai_thread_flow.rs  ai_workspace_inline_diff.rs  ai_workspace_render.rs  ai_workspace_render_paint.rs  ai_workspace_render_tests.rs  ai_workspace_session.rs  ai_workspace_session_preview.rs  ai_workspace_session_streaming.rs  ai_workspace_surface.rs  ai_workspace_surface_render_tests.rs  ai_workspace_timeline_projection.rs  branch_picker.rs  data.rs  data_segments.rs  desktop_notifications.rs  diff_viewport.rs  files_editor.rs  fuzzy_match.rs  highlight.rs  hunk_picker.rs  markdown_links.rs  native_files_editor.rs  native_files_editor_element.rs  native_files_editor_input.rs  native_files_editor_language.rs  native_files_editor_paint.rs  native_files_editor_workspace.rs  native_files_editor_workspace_buffers.rs  (+19 more)
crates/hunk-desktop/src/app/ai_runtime/: catalog.rs  core.rs  helpers.rs  lifecycle.rs  pending_steer.rs  reconnect.rs  sync.rs  tests.rs  transport.rs
crates/hunk-desktop/src/app/controller/: about.rs  ai.rs  ai_composer_completion.rs  ai_git_ops.rs  ai_perf.rs  comments.rs  comments_match.rs  context_menu.rs  core.rs  core_bootstrap.rs  core_diff.rs  core_refresh.rs  core_runtime.rs  core_snapshot.rs  core_workspace_projects.rs  core_workspace_targets.rs  desktop_notifications.rs  editor.rs  editor_reuse.rs  editor_search.rs  file_quick_open.rs  file_terminal.rs  file_tree.rs  file_tree_fs.rs  forge_auth_store.rs  fps.rs  git_ops.rs  git_ops_review.rs  github_auth_flow.rs  jj_graph.rs  markdown_links.rs  mod.rs  operation_history.rs  project_open.rs  recent_commits.rs  review_compare.rs  review_editor.rs  scroll.rs  selection.rs  settings.rs  (+3 more)
crates/hunk-desktop/src/app/files_editor/: highlight.rs  paint.rs  runtime_env.rs  selection.rs  theme.rs
crates/hunk-desktop/src/app/render/: ai.rs  ai_browser_surface.rs  ai_composer.rs  ai_followup_prompt.rs  ai_helpers.rs  ai_inline_review_surface.rs  ai_loading.rs  ai_timeline_list_view.rs  ai_workspace_sections.rs  ai_workspace_surface.rs  comments.rs  commit.rs  commit_bookmark_picker.rs  context_menu.rs  diff.rs  diff_rows.rs  file_banner.rs  file_editor.rs  file_editor_surface.rs  file_quick_open.rs  file_status.rs  git_recent_commits.rs  git_workspace.rs  jj_graph.rs  (+17 more)
crates/hunk-desktop/tests/: ai_composer_clipboard.rs  ai_dynamic_tools.rs  ai_git_progress.rs  ai_terminal_safety.rs  ai_thread_flow.rs  ai_workspace_inline_diff.rs  ai_workspace_session.rs  branch_picker.rs  diff_viewport.rs  file_editor_reuse.rs  file_preview_syntax_segments.rs  markdown_links.rs  native_files_editor.rs  native_files_editor_paint.rs  performance_harness.rs  project_picker_workspace_removal.rs  refresh_policy.rs  review_editor_model.rs  review_workspace_session.rs  workspace_editor_session.rs  workspace_view_modes.rs
crates/hunk-domain/: Cargo.toml
crates/hunk-domain/src/: config.rs  diff.rs  lib.rs  markdown_preview.rs  state.rs
crates/hunk-domain/src/db/: comments.rs  connection.rs  mod.rs
crates/hunk-domain/src/diff/: parser.rs  side_by_side.rs  types.rs
crates/hunk-domain/tests/: app_config_notifications.rs  app_config_shortcuts.rs  app_state.rs  comment_anchor_hash.rs  comment_clipboard_format.rs  comment_remap_status.rs  db_comments_store.rs  diff_parser.rs  markdown_preview_parser.rs
crates/hunk-forge/: Cargo.toml
crates/hunk-forge/src/: auth.rs  client.rs  github.rs  github_auth.rs  gitlab.rs  lib.rs  models.rs
crates/hunk-forge/tests/: auth_resolution.rs  github_auth.rs  github_reviews.rs  gitlab_reviews.rs  review_models.rs
crates/hunk-git/: Cargo.toml
crates/hunk-git/src/: branch.rs  command_env.rs  compare.rs  git.rs  git2_helpers.rs  history.rs  lib.rs  mutation.rs  network.rs  worktree.rs
crates/hunk-git/src/git/: patch.rs  tree.rs  workspace.rs
crates/hunk-git/src/mutation/: branch_transfer.rs
crates/hunk-git/tests/: branch_ops.rs  command_env.rs  history_ops.rs  ignore_paths.rs  mutation_ops.rs  network_ops.rs  read_path.rs  worktree_ops.rs
crates/hunk-language/: Cargo.toml
crates/hunk-language/src/: features.rs  lib.rs  preview.rs
crates/hunk-language/tests/: syntax.rs
crates/hunk-terminal/: Cargo.toml
crates/hunk-terminal/src/: input.rs  lib.rs  runtime.rs  session.rs  vt.rs
crates/hunk-terminal/src/backend/: ghostty.rs
crates/hunk-terminal/tests/: input_encoding.rs  terminal_session.rs
crates/hunk-updater/: Cargo.toml
crates/hunk-updater/src/: lib.rs
crates/hunk-updater/tests/: update_manifest.rs
(+213 files in other folders)
