[workspace]
members = [
  "crates/hunk-terminal",
  "crates/hunk-text",
  "crates/hunk-language",
  "crates/hunk-editor",
  "crates/hunk-domain",
  "crates/hunk-git",
  "crates/hunk-forge",
  "crates/hunk-updater",
  "crates/hunk-desktop",
  "crates/hunk-codex",
]
default-members = ["crates/hunk-desktop"]
resolver = "2"

[workspace.package]
license = "GPL-3.0-or-later"

[profile.ci]
inherits = "dev"
debug = 0

[patch.crates-io]
# Keep Rama on rustls' ring provider. The upstream alpha crate enables
# aws-lc-rs by default, which pulls in aws-lc-sys and currently fails to
# link on macOS arm64 in our environment.
rama-tls-rustls = { path = "vendor/rama-tls-rustls" }
