[workspace]
members = [
  "crates/hunk-terminal",
  "crates/hunk-text",
  "crates/hunk-language",
  "crates/hunk-editor",
  "crates/hunk-domain",
  "crates/hunk-git",
  "crates/hunk-forge",
  "crates/hunk-updater",
  "crates/hunk-desktop",
  "crates/hunk-codex",
]
default-members = ["crates/hunk-desktop"]
resolver = "2"

[workspace.package]
license = "GPL-3.0-or-later"

[workspace.dependencies]
# Keep the Codex fork pin explicit and narrow. This is easier to audit than
# patching the entire upstream workspace and makes eventual upstream removal
# straightforward.
codex-app-server = { git = "https://github.com/niteshbalusu11/codex.git", branch = "hunk/embedded-apply-patch-fix" }
codex-app-server-protocol = { git = "https://github.com/niteshbalusu11/codex.git", branch = "hunk/embedded-apply-patch-fix" }
codex-arg0 = { git = "https://github.com/niteshbalusu11/codex.git", branch = "hunk/embedded-apply-patch-fix" }
codex-config = { git = "https://github.com/niteshbalusu11/codex.git", branch = "hunk/embedded-apply-patch-fix" }
codex-core = { git = "https://github.com/niteshbalusu11/codex.git", branch = "hunk/embedded-apply-patch-fix" }
codex-exec-server = { git = "https://github.com/niteshbalusu11/codex.git", branch = "hunk/embedded-apply-patch-fix" }
codex-feedback = { git = "https://github.com/niteshbalusu11/codex.git", branch = "hunk/embedded-apply-patch-fix" }
codex-protocol = { git = "https://github.com/niteshbalusu11/codex.git", branch = "hunk/embedded-apply-patch-fix" }
codex-utils-absolute-path = { git = "https://github.com/niteshbalusu11/codex.git", branch = "hunk/embedded-apply-patch-fix" }
codex-utils-rustls-provider = { git = "https://github.com/niteshbalusu11/codex.git", branch = "hunk/embedded-apply-patch-fix" }

[profile.ci]
inherits = "dev"
debug = 0

[patch.crates-io]
# Keep Rama on rustls' ring provider. The upstream alpha crate enables
# aws-lc-rs by default, which pulls in aws-lc-sys and currently fails to
# link on macOS arm64 in our environment.
rama-tls-rustls = { path = "vendor/rama-tls-rustls" }
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
