[package]
name = "hunk-codex"
version = "0.1.0"
license.workspace = true
edition = "2024"

[dependencies]
anyhow = "1.0"
codex-app-server-protocol = { git = "https://github.com/openai/codex.git", tag = "rust-v0.120.0" }
fastwebsockets = { version = "0.10", features = ["upgrade"] }
futures-util = "0.3"
http-body-util = "0.1"
hyper = "1.7"
hyper-util = "0.1"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.50", features = ["net", "rt", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.28"
tracing = "0.1"
url = "2.5"

[dev-dependencies]
tempfile = "3.23"
tungstenite = "0.28"
