[package]
name = "hunk-codex"
version = "0.1.0"
license.workspace = true
edition = "2024"

[dependencies]
anyhow = "1.0"
codex-app-server = { git = "https://github.com/openai/codex.git", tag = "rust-v0.120.0" }
codex-app-server-protocol = { git = "https://github.com/openai/codex.git", tag = "rust-v0.120.0" }
codex-arg0 = { git = "https://github.com/openai/codex.git", tag = "rust-v0.120.0" }
codex-core = { git = "https://github.com/openai/codex.git", tag = "rust-v0.120.0" }
codex-exec-server = { git = "https://github.com/openai/codex.git", tag = "rust-v0.120.0" }
codex-feedback = { git = "https://github.com/openai/codex.git", tag = "rust-v0.120.0" }
codex-protocol = { git = "https://github.com/openai/codex.git", tag = "rust-v0.120.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.50", features = ["net", "rt", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.23"
wiremock = "0.6.5"
