[package]
name = "hunk-codex"
version = "0.1.0"
license.workspace = true
edition = "2024"

[dependencies]
anyhow = "1.0"
codex-app-server.workspace = true
codex-app-server-protocol.workspace = true
codex-arg0.workspace = true
codex-config.workspace = true
codex-core.workspace = true
codex-exec-server.workspace = true
codex-feedback.workspace = true
codex-protocol.workspace = true
codex-utils-absolute-path.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.50", features = ["net", "rt", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
hunk-browser = { path = "../hunk-browser" }

[dev-dependencies]
tempfile = "3.23"
wiremock = "0.6.5"
