[package]
name = "hunk-desktop"
version = "0.1.0"
edition = "2024"
authors = ["Prodata"]

[[bin]]
name = "hunk_desktop"
path = "src/main.rs"

[package.metadata.packager]
product-name = "Hunk"
identifier = "com.prodata.hunk"
publisher = "Prodata"
description = "Very fast git diff viewer and codex orchestrator."
long-description = "A super fast, simple Git diff viewer and codex orchestrator built with GPUI."
authors = ["Prodata"]
category = "DeveloperTool"
icons = [
  "../../assets/icons/Hunk.icns",
  "../../assets/icons/hunk-icon-default.png",
  "../../assets/icons/Hunk.ico",
]
resources = ["../../assets/codex-runtime"]

[[package.metadata.packager.binaries]]
path = "hunk_desktop"
main = true

[dependencies]
anyhow = "1.0"
ctrlc = "3.5"
dirs = "6.0"
futures = "0.3"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = [
  "font-kit",
  "x11",
  "wayland",
  "runtime_shaders",
] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", features = [
  "tree-sitter-languages",
] }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
notify = "8.2.0"
syntect = "5.3"
toml = "0.9"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3", features = ["formatting", "local-offset"] }
hunk-domain = { path = "../hunk-domain" }
hunk-git = { path = "../hunk-git" }
hunk-codex = { path = "../hunk-codex" }
codex-app-server-protocol = { git = "https://github.com/openai/codex.git", tag = "rust-v0.115.0-alpha.11" }
codex-protocol = { git = "https://github.com/openai/codex.git", tag = "rust-v0.115.0-alpha.11" }

[target.'cfg(target_os = "macos")'.dev-dependencies]
git2 = { version = "0.20", features = ["https", "ssh", "vendored-libgit2", "vendored-openssl"] }

[target.'cfg(not(target_os = "macos"))'.dev-dependencies]
git2 = { version = "0.20", features = ["https", "ssh"] }
