[package]
name = "hunk-desktop"
version = "0.0.1-alpha.19"
license.workspace = true
edition = "2024"
authors = ["Nitesh Balusu"]

[[bin]]
name = "hunk_desktop"
path = "src/main.rs"

[package.metadata.packager]
product-name = "Hunk"
publisher = "Nitesh Balusu"
description = "Very fast git diff viewer and codex orchestrator."
long-description = "A super fast, simple Git diff viewer and codex orchestrator built with GPUI."
authors = ["Nitesh Balusu"]
category = "DeveloperTool"
icons = [
  "../../assets/icons/Hunk.icns",
  "../../assets/icons/hunk_new.png",
  "../../assets/icons/Hunk.ico",
]
resources = ["../../assets/codex-runtime"]

[[package.metadata.packager.binaries]]
path = "hunk_desktop"
main = true

[dependencies]
anyhow = "1.0"
arc-swap = "1.7.1"
ctrlc = "3.5"
dirs = "6.0"
futures = "0.3"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = [
  "font-kit",
  "x11",
  "wayland",
  "runtime_shaders",
] }
gpui-component = { git = "https://github.com/niteshbalusu11/gpui-component", rev = "4640591715ae6732b6b2075f040672eeabdb5c87", features = [
  "tree-sitter-languages",
] }
gpui-component-assets = { git = "https://github.com/niteshbalusu11/gpui-component", rev = "4640591715ae6732b6b2075f040672eeabdb5c87" }
notify = "8.2.0"
toml = "0.9"
serde_json = "1.0"
lsp-types = { version = "0.97.0", features = ["proposed"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3", features = ["formatting", "local-offset"] }
rust-embed = "8.5"
hunk-domain = { path = "../hunk-domain" }
hunk-git = { path = "../hunk-git" }
hunk-codex = { path = "../hunk-codex" }
hunk-terminal = { path = "../hunk-terminal" }
hunk-editor = { path = "../hunk-editor" }
hunk-language = { path = "../hunk-language" }
hunk-text = { path = "../hunk-text" }
codex-app-server-protocol = { git = "https://github.com/openai/codex.git", tag = "rust-v0.116.0" }
codex-protocol = { git = "https://github.com/openai/codex.git", tag = "rust-v0.116.0" }

[target.'cfg(target_os = "macos")'.dev-dependencies]
git2 = { version = "0.20", features = ["https", "ssh", "vendored-libgit2", "vendored-openssl"] }
tempfile = "3.21"

[target.'cfg(not(target_os = "macos"))'.dev-dependencies]
git2 = { version = "0.20", features = ["https", "ssh"] }
tempfile = "3.21"
