[package]
name = "hunk-domain"
version = "0.1.0"
license.workspace = true
edition = "2024"

[dependencies]
anyhow = "1.0"
dirs = "6.0"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
comrak = { version = "0.51.0", default-features = false }
hunk-language = { path = "../hunk-language" }
