[package]
name = "hunk-forge"
version = "0.1.0"
license.workspace = true
edition = "2024"

[dependencies]
anyhow = "1.0"
hunk-git = { path = "../hunk-git" }
octocrab = "0.49"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.50", features = ["rt", "time"] }
