[package]
name = "hunk-forge"
version = "0.1.0"
license.workspace = true
edition = "2024"

[dependencies]
anyhow = "1.0"
gitlab = "0.1810.0"
hunk-git = { path = "../hunk-git" }
octocrab = "0.49"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "form", "json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.50", features = ["rt", "time"] }
