[package]
name = "hunk-git"
version = "0.1.0"
license.workspace = true
edition = "2024"

[dependencies]
anyhow = "1.0"
gix = { version = "0.78.0", default-features = false, features = ["parallel", "revision", "status"] }
hunk-domain = { path = "../hunk-domain" }

[target.'cfg(target_os = "macos")'.dependencies]
git2 = { version = "0.20", features = ["https", "ssh", "vendored-libgit2", "vendored-openssl"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
git2 = { version = "0.20", features = ["https", "ssh"] }

[dev-dependencies]
tempfile = "3.17"
