[package]
name = "hunk-language"
version = "0.1.0"
edition = "2024"

[dependencies]
hunk-text = { path = "../hunk-text" }
tree-sitter = "0.25.9"
tree-sitter-highlight = "0.25.9"
tree-sitter-css = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-html = "0.23.2"
tree-sitter-javascript = "0.23.1"
tree-sitter-json = "0.24.8"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-yaml = "0.7.2"
