[package]
name = "hunk-language"
version = "0.1.0"
license.workspace = true
edition = "2024"

[dependencies]
hunk-text = { path = "../hunk-text" }
tree-sitter = "0.25.9"
tree-sitter-highlight = "0.25.9"
tree-sitter-bash = "0.23.3"
tree-sitter-c = "0.24.1"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-hcl = "1.1.0"
tree-sitter-html = "0.23.2"
tree-sitter-javascript = "0.23.1"
tree-sitter-java = "0.23.5"
tree-sitter-json = "0.24.8"
tree-sitter-kotlin-sg = "0.4.0"
tree-sitter-md = "0.5.3"
tree-sitter-nix = "0.3.0"
tree-sitter-powershell = "0.26.3"
tree-sitter-python = "0.23.6"
tree-sitter-rust = "0.24.0"
tree-sitter-sequel = "0.3.11"
tree-sitter-swift = "0.7.1"
tree-sitter-dockerfile-updated = "0.2.0"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-yaml = "0.7.2"
