[package]
name = "hunk-terminal"
version = "0.1.0"
license.workspace = true
edition = "2024"

[dependencies]
anyhow = "1.0"
libghostty-vt = { git = "https://github.com/niteshbalusu11/libghostty-rs", rev = "c705937d77928f0e88b99d77d5ee0f45b57809c4", features = ["link-static"] }
portable-pty = "0.9.0"
