[package]
name = "hunk-terminal"
version = "0.1.0"
license.workspace = true
edition = "2024"

[dependencies]
anyhow = "1.0"
libghostty-vt = { git = "https://github.com/niteshbalusu11/libghostty-rs", rev = "70876092218e705a8678eff10385bc9547866d31", features = ["link-static"] }
portable-pty = "0.9.0"
