[package]
name = "hunk-terminal"
version = "0.1.0"
license.workspace = true
edition = "2024"

[dependencies]
anyhow = "1.0"
libghostty-vt = { git = "https://github.com/niteshbalusu11/libghostty-rs", rev = "73b35bceb08729d08e164cc29125667911907e65", features = ["link-static"] }
portable-pty = "0.9.0"
