[package]
name = "hunk-updater"
version = "0.1.0"
license.workspace = true
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
ed25519-dalek = { version = "2.2.0", default-features = false, features = ["std"] }
flate2 = "1.1"
libc = "0.2"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"

[dev-dependencies]
tempfile = "3.27.0"
